--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
 
     <link rel="stylesheet" href="index.css">
@@ -33,11 +33,11 @@
             <div class="sec">
               <div class="section-1">
                 <div class="img-stars">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
                 </div>
   
                 <p class="section"> 
@@ -49,11 +49,11 @@
             <div class="sec">
               <div class="section-2">
                 <div class="img-stars">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
                 </div>
   
                 <p class="section">
@@ -65,11 +65,11 @@
             <div class="sec">
               <div class="section-3">
                 <div class="img-stars">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
-                  <img src=".//images/icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
+                  <img src="icon-star.svg" alt="">
                 </div>
   
                 <p class="section">
@@ -85,7 +85,7 @@
             <div class="second-section-1">
               <div class="name-and-img">
                 <div class="img">
-                  <img src=".//images/image-colton.jpg" alt="">
+                  <img src="image-colton.jpg" alt="">
                 </div>
                 <div class="name">
                   <p class="nm"> 
@@ -109,7 +109,7 @@
             <div class="second-section-2">
               <div class="name-and-img">
                 <div class="img">
-                  <img src=".//images/image-irene.jpg" alt="">
+                  <img src="image-irene.jpg" alt="">
                 </div>
                 <div class="name">
                   <p class="nm">
@@ -132,7 +132,7 @@
             <div class="second-section-3">
               <div class="name-and-img">
                 <div class="img">
-                  <img src=".//images/image-anne.jpg" alt="">
+                  <img src="image-anne.jpg" alt="">
                 </div>
                 <div class="name">
                   <p class="nm">
